--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,10 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import 'node_modules/bootstrap/scss/bootstrap';
+
+// Partials
+@import 'partials/mixins';
+@import 'partials/common';
+@import 'partials/main_home';
+@import 'partials/errors';
