--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
-@import 'variables';
+@import 'partials/variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
@@ -11,5 +11,4 @@
 // Partials
 @import 'partials/mixins';
 @import 'partials/common';
-@import 'partials/main_home';
 @import 'partials/errors';
